--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,14 @@ html, body, div.main {
 .main {
   padding-top: 60px; }
 
+#container {
+  height: 100%;
+  overflow: scroll;
+  padding: 0; }
+
 #sidebar {
-  height: 100%; }
+  height: 100%;
+  padding-right: 0; }
 
 .sidebar-header {
   background-color: #ddd;
@@ -63,10 +69,6 @@ html, body, div.main {
     position: absolute;
     cursor: pointer;
     cursor: se-resize; }
-
-#container {
-  height: 100%;
-  overflow: scroll; }
 
 [v-cloak] {
   display: none; }
