--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-html, body, div.main {
+html, body, div.main-wrapper, div.main {
   height: 100%; }
 
 .main {
@@ -17,37 +17,36 @@ html, body, div.main {
   background-color: #ddd;
   font-size: 24px;
   color: #333;
-  padding: 0 10px;
+  padding: 10px;
   border-bottom: 1px solid #ccc; }
+  .sidebar-header h4 {
+    margin: 0; }
 
 .file-list {
+  width: 100%;
+  padding: 0;
   height: 80%;
   border-right: 1px solid #ccc; }
   .file-list input[type="checkbox"] {
     margin-right: 5px; }
   .file-list .nav-pills > li > a {
     border-radius: 0; }
+  .file-list div.btn-group {
+    width: 100%; }
 
 .file-drop-zone {
-  width: 100%;
   height: 20%;
-  opacity: 0;
+  opacity: 1;
   cursor: pointer;
+  color: #999;
   z-index: 1001;
-  transform: translateY(-100%); }
-
-.file-drop-zone-dummy {
-  height: 20%;
+  background-color: #ddd;
   border-top: 1px solid #ccc;
   border-right: 1px solid #ccc;
   text-align: center;
-  color: #999;
   font-size: 14px;
-  cursor: pointer;
-  background-color: #ddd;
-  z-index: 1000;
   padding-top: 10%; }
-  .file-drop-zone-dummy i {
+  .file-drop-zone i {
     font-size: 40px; }
 
 #charts-wrapper {
@@ -57,10 +56,12 @@ html, body, div.main {
 
 .chart-window {
   border: 1px solid #ddd;
+  width: auto;
+  padding: 0;
+  margin: 0;
   -webkit-transform: translate(0px, 0px);
   transform: translate(0px, 0px); }
   .chart-window .file-name {
-    display: flex;
     height: 25px;
     background-color: #566473;
     padding-left: 10px;
@@ -70,5 +71,7 @@ html, body, div.main {
     cursor: pointer;
     cursor: se-resize; }
 
-[v-cloak] {
-  display: none; }
+.modal .text-primary {
+  color: white; }
+.modal .close {
+  color: #ddd; }
