--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -7,11 +7,14 @@
   background-color: #ddd;
   font-size: 24px;
   color: #333;
-  padding: 0 10px;
+  padding: 10px;
   border-bottom: 1px solid #ccc;
+  h4 { margin: 0; }
 }
 
 .file-list {
+  width: 100%;
+  padding: 0;
   height: 80%;
   border-right: 1px solid #ccc;
 
@@ -22,32 +25,26 @@
   .nav-pills > li > a {
     border-radius: 0;
   }
+
+  div.btn-group {
+    width: 100%;
+  }
 }
 
 .file-drop-zone {
-  width: 100%;
   height: 20%;
-  opacity: 0;
+  opacity: 1;
   cursor: pointer;
+  color: #999;
   z-index: 1001;
-  transform: translateY(-100%);
-}
-
-.file-drop-zone-dummy {
-  height: 20%;
+  background-color: #ddd;
   border-top: 1px solid #ccc;
   border-right: 1px solid #ccc;
   text-align: center;
-  color: #999;
   font-size: 14px;
-  cursor: pointer;
-  background-color: #ddd;
-  z-index: 1000;
   padding-top: 10%;
 
   i {
     font-size: 40px;
   }
 }
-
-
